// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Input when state = error 1`] = `
{
  "invalid": "true",
  "name": "Some label. Some error message.",
  "role": "textbox",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Input when state = none 1`] = `
{
  "name": "Some label",
  "role": "textbox",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Input when state = success 1`] = `
{
  "name": "Some label. Some success message.",
  "role": "textbox",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Message when state = error 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some error message.",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`accessibility should add/remove accessibility tree properties if state changes programmatically: Of Message when state = success 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some success message.",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "status",
}
`;

exports[`accessibility should expose correct accessibility tree for input type=search with value 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "name": "value",
                          "role": "StaticText",
                        },
                      ],
                      "name": "",
                      "role": "generic",
                    },
                    {
                      "role": "none",
                    },
                  ],
                  "name": "",
                  "role": "searchbox",
                  "value": "value",
                },
              ],
              "role": "none",
            },
          ],
          "name": "",
          "role": "LabelText",
        },
        {
          "children": [
            {
              "role": "none",
            },
          ],
          "role": "none",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "name": "Clear field",
                          "role": "StaticText",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "name": "Clear field",
              "role": "button",
            },
          ],
          "name": "",
          "role": "generic",
        },
      ],
      "name": "",
      "role": "generic",
    },
  ],
  "role": "none",
}
`;

exports[`accessibility should expose correct accessibility tree properties in error state: Of Input 1`] = `
{
  "invalid": "true",
  "name": "Some label. Some error message",
  "role": "textbox",
}
`;

exports[`accessibility should expose correct accessibility tree properties in error state: Of Message 1`] = `
{
  "children": [
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
    {
      "name": "Some error message",
      "role": "StaticText",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`accessibility should expose correct accessibility tree when password visibility button is clicked: Initially 1`] = `
{
  "name": "Toggle password visibility",
  "pressed": false,
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility tree when password visibility button is clicked: Pressed 1`] = `
{
  "name": "Toggle password visibility",
  "pressed": true,
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility tree when password visibility button is clicked: Pressed again 1`] = `
{
  "name": "Toggle password visibility",
  "pressed": false,
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility tree with description text 1`] = `
{
  "name": "Some label. Some description",
  "role": "textbox",
}
`;

exports[`accessibility should expose correct initial accessibility tree 1`] = `
{
  "name": "Some label",
  "role": "textbox",
}
`;
